@@ -75,12 +75,13 @@ IDEAS:\n
                          tal:attributes="type python:\'text/css\'">\n
                   </style>\n
                 </tal:block>\n
-                <tal:block tal:define="dummy python: css_list.extend(field.get_css_list(REQUEST=request) + [\'wizard.css\'])" />\n
+                <tal:block tal:define="dummy python: css_list.extend(field.get_css_list(REQUEST=request))" />\n
                 <tal:block tal:define="dummy python: js_list.extend(field.get_javascript_list(REQUEST=request))" />\n
               </tal:block>\n
             </tal:block>\n
           </tal:block>\n
-          <tal:block tal:repeat="css python: css_list">\n
+          <tal:block tal:define="dummy python: css_list.append(\'wizard.css\')"\n
+                     tal:repeat="css python: css_list">\n
             <link tal:attributes="href css" type="text/css" rel="stylesheet" />\n
           </tal:block>\n
           <tal:block tal:repeat="js python: js_list">\n
